--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Speaking Glasses</string>
     <string name="please_choose_language">Veuillez choisir votre langue:</string>
-    <string name="error_tts_engine">Erreur: impossible de charger le moteur TTS.</string>
+    <string name="take_photo_explanation">Veuillez appuyer sur le bouton de sélection pour prendre une photo.</string>
+    <string name="error_tts_engine">Impossible de charger le moteur TTS.</string>
+    <string name="error_cannot_start_camera">Impossible de démarrer la caméra.</string>
+    <string name="error_no_connectivity">Veuillez connecter votre appareil à internet.</string>
 </resources>
