--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Speaking Glasses</string>
     <string name="please_choose_language">Please choose your language</string>
     <string name="take_photo_explanation">Please push the select button to take a photo.</string>
+    <string name="auto_focus">Auto-focus</string>
+    <string name="photo_taken">Photo taken</string>
     <string name="error_tts_engine">Unable to load the TTS engine.</string>
     <string name="error_cannot_start_camera">Unable to start the camera.</string>
     <string name="error_no_connectivity">Please connect your device to internet.</string>
