--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="take_photo_explanation">Please push the select button to take a photo.</string>
     <string name="auto_focus">Auto-focus</string>
     <string name="photo_taken">Photo taken</string>
+    <string name="analyze_photo">Analyzing the photo</string>
     <string name="error_tts_engine">Unable to load the TTS engine.</string>
     <string name="error_cannot_start_camera">Unable to start the camera.</string>
     <string name="error_no_connectivity">Please connect your device to internet.</string>
