--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="error_tts_engine">Unable to load the TTS engine.</string>
     <string name="error_cannot_start_camera">Unable to start the camera.</string>
     <string name="error_no_connectivity">Please connect your device to internet.</string>
+    <string name="error_analysis_failed">Unable to analyse the image. Please try again later.</string>
 </resources>
